# django-channels-messaging

./: .gitignore  README.md  Taskfile.yml  chat_client.py  client.js  flow.mermaid  package-lock.json  package.json  pyproject.toml
chat/: consumers.py  models.py  routing.py  urls.py  utils.py  views.py
core/: asgi.py  settings.py  urls.py
